# unchained

./: .gitignore  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
api/: urls.py
config/settings/: base.py
frontend/: apps.py
frontend/app/: App.tsx
frontend/core/: asset_loader.py
frontend/templatetags/: django_vite.py
templates/: index.html
