[tool.poetry]
name = "unchained"
version = "0.1.0"
description = ""
authors = ["blackwarlow <blackwarlow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
djangorestframework = "^3.15.2"
whitenoise = "^6.6.0"
django-cors-headers = "^4.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pygls = "^1.3.1"
lsprotocol = "^2023.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
